--- a/filter.html
+++ b/filter.html
@@ -9,6 +9,19 @@
 </head>
 
 <body>
+    <header>
+        <header>
+            <div class="hello">
+                <div class="d-flex justify-content-start">
+                    <div class="logo"><b>e!</b></div>
+                </div>
+                <div class="d-flex justify-content-end">
+                    <div class="login"><b>login</b></div>
+                    <button class="button"><b>create account</b></button>
+                </div>
+            </div>
+        </header>
+    </header>
     <h2 class="heading">Breakfast Places in Mumbai</h2>
     <div class="container-fluid">
         <div class="left">
@@ -64,43 +77,62 @@
         <div class="right">
             <div class="row">
                 <div class="col-12">
-                    <div class="row">
+                    <div class="row first">
                         <div class="col-3">
                             <img class="img-fluid img" src="bf.png" />
                         </div>
                         <div class="col-9">
                             <h5 class="heading1">The Big Chill Cakery</h5>
                             <h6 class="subheading">FORT</h6>
-                            <P>Shop 1, Plot D, Samruddhi Complex, Chincholi …</P>
+                            <P class="add">Shop 1, Plot D, Samruddhi Complex, Chincholi …</P>
+                        </div>                 
+                        <hr/>
+                        <div class="row mt-2">
+                            <div class="col-4">
+                                <p class="cuisine"> CUISINES: </p>
+                                <p class="cuisine">COST FOR TWO:</p>
+                            </div>
+                            <div class="col-8">
+                                <p class="Bakery">Bakery</p>
+                                <p class="Bakery">₹700</p>
+                            </div>
                         </div>
                     </div>
-                    <div class="row mt-2">
-                        <div class="col-4">
-                            <p> CUISINES: </p>
-                            <p>COST FOR TWO:</p>
-                        </div>
-                        <div class="col-8">
-                            <p>Bakery</p>
-                            <p>700</p>
-                        </div>
-                    </div>
-
                 </div>
                 <div class="col-12">
-                    <div class="row mt-3">
+                    <div class="row mt-3 second">
                         <div class="col-3">
                             <img class="img-fluid img" src="bf.png" />
                         </div>
                         <div class="col-9">
                             <h5 class="heading1">The Bake Shop</h5>
                             <h6 class="subheading">FORT</h6>
-                            <p>Shop 1, Plot D, Samruddhi Complex, Chincholi …</p>
+                            <p class="add">Shop 1, Plot D, Samruddhi Complex, Chincholi …</p>
+                        </div>
+                        <hr/>
+                        <div class="row mt-2">
+                            <div class="col-4">
+                                <p class="cuisine"> CUISINES: </p>
+                                <p class="cuisine">COST FOR TWO:</p>
+                            </div>
+                            <div class="col-8">
+                                <p class="Bakery">Bakery</p>
+                                <p class="Bakery">₹700</p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
+                    <button class="btn"> < </button>
+                    <button class="btn">1</button>
+                    <button class="btn">2</button>
+                    <button class="btn">3</button>
+                    <button class="btn">4</button>
+                    <button class="btn">5</button>
+                    <button class="btn">></button>
         </div>
     </div>
+
 </body>
 
 </html>
