--- a/filter.html
+++ b/filter.html
@@ -3,29 +3,41 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>filter page</title>
+    <title>Filter Page</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="filter.css" />
 </head>
 
 <body>
     <header>
-        <header>
-            <div class="hello">
-                <div class="d-flex justify-content-start">
-                    <div class="logo"><b>e!</b></div>
+        <div class="bg-danger p-3 ">
+            <div class="container">
+            <div class="row align-items-center">
+                <div class="col ">
+                    <span class="bg-white p-2 rounded-circle text-danger fw-bold">
+                        e!
+                    </span>
                 </div>
-                <div class="d-flex justify-content-end">
-                    <div class="login"><b>login</b></div>
-                    <button class="button"><b>create account</b></button>
+                <div class="col">
+                    <div class="d-flex justify-content-end">
+                    <button class="btn border text-white">login</button>
+                    <button class="btn border ms-2 text-white">create button</button>
+                </div>
                 </div>
             </div>
-        </header>
+        </div>
+        </div>
     </header>
-    <h2 class="heading">Breakfast Places in Mumbai</h2>
-    <div class="container-fluid">
-        <div class="left">
-            <h5>filter</h5>
+    <section>
+    <div class="container">
+        <h2 class="heading">Breakfast Places in Mumbai</h2>
+        <div class="row">
+        <div class="col-3">
+            <div class="filter">
+            <h5>Filters</h5>
             <label>select location</label>
             <div>
                 <select>
@@ -74,10 +86,11 @@
                 <input type="radio" name="price" /><span> Price high to low</span>
             </div>
         </div>
-        <div class="right">
+        </div>
+        <div class="col-9">
             <div class="row">
                 <div class="col-12">
-                    <div class="row first">
+                    <div class="row item">
                         <div class="col-3">
                             <img class="img-fluid img" src="bf.png" />
                         </div>
@@ -85,22 +98,22 @@
                             <h5 class="heading1">The Big Chill Cakery</h5>
                             <h6 class="subheading">FORT</h6>
                             <P class="add">Shop 1, Plot D, Samruddhi Complex, Chincholi …</P>
-                        </div>                 
-                        <hr/>
+                        </div>
+                        <hr />
                         <div class="row mt-2">
                             <div class="col-4">
                                 <p class="cuisine"> CUISINES: </p>
                                 <p class="cuisine">COST FOR TWO:</p>
                             </div>
                             <div class="col-8">
-                                <p class="Bakery">Bakery</p>
-                                <p class="Bakery">₹700</p>
+                                <p class="bakery">Bakery</p>
+                                <p class="bakery">₹700</p>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-12">
-                    <div class="row mt-3 second">
+                    <div class="row mt-3 item">
                         <div class="col-3">
                             <img class="img-fluid img" src="bf.png" />
                         </div>
@@ -109,29 +122,33 @@
                             <h6 class="subheading">FORT</h6>
                             <p class="add">Shop 1, Plot D, Samruddhi Complex, Chincholi …</p>
                         </div>
-                        <hr/>
+                        <hr />
                         <div class="row mt-2">
                             <div class="col-4">
                                 <p class="cuisine"> CUISINES: </p>
                                 <p class="cuisine">COST FOR TWO:</p>
                             </div>
                             <div class="col-8">
-                                <p class="Bakery">Bakery</p>
-                                <p class="Bakery">₹700</p>
+                                <p class="bakery">Bakery</p>
+                                <p class="bakery">₹700</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-                    <button class="btn"> < </button>
-                    <button class="btn">1</button>
-                    <button class="btn">2</button>
-                    <button class="btn">3</button>
-                    <button class="btn">4</button>
-                    <button class="btn">5</button>
-                    <button class="btn">></button>
+            <div class="mt-3 d-flex justify-content-center">
+            <button class="btn btn-light"> < </button>
+                    <button class="btn btn-light">1</button>
+                    <button class="btn btn-light">2</button>
+                    <button class="btn btn-light">3</button>
+                    <button class="btn btn-light">4</button>
+                    <button class="btn btn-light">5</button>
+                    <button class="btn btn-light">></button>
+                </div>
         </div>
     </div>
+    </div>
+</section>
 
 </body>
 
